--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ deploy:
   - skip_cleanup: true
     provider: script
     script: npm run deploy
+    github_token: $GITHUB_TOKEN
     on:
       branch: master
   - skip_cleanup: true
